--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -13,20 +13,34 @@
 
 	input[type='text'],
 	select {
-		@apply rounded;
+		@apply rounded-lg;
 	}
 
-	.shadow-solid {
-		box-shadow: 8px 8px #000;
-	}
-
-	.btn {
-		box-shadow: 0px 4px #666;
+	.btn-3d {
+		box-shadow: 0px 4px #9ca3af;
 		margin-bottom: 4px;
 	}
 
-	.btn:active {
+	.btn-3d:active {
 		box-shadow: none;
 		transform: translateY(4px);
+	}
+
+	.btn-blue {
+		@apply bg-blue-500 text-white border-2 border-blue-900;
+	}
+
+	.btn-3d-disabled {
+		@apply cursor-default;
+		box-shadow: 0px 4px #9ca3af;
+		margin-bottom: 4px;
+	}
+
+	.btn-white {
+		@apply bg-white text-black border-2 border-gray-900;
+	}
+
+	.btn-text {
+		@apply px-3 py-2 text-sm font-bold uppercase tracking-widest rounded-lg;
 	}
 }
