--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -7,6 +7,26 @@
 		@apply font-mono;
 	}
 
+	/* custom scrollbar */
+	::-webkit-scrollbar {
+		width: 20px;
+	}
+
+	::-webkit-scrollbar-track {
+		background-color: transparent;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background-color: #d6dee1;
+		border-radius: 20px;
+		border: 6px solid transparent;
+		background-clip: content-box;
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+		background-color: #a8bbbf;
+	}
+
 	.label-setting {
 		@apply block uppercase tracking-wide text-gray-700 text-xs font-bold;
 	}
